apps/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: adminer
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP # Change to LoadBalancer or NodePort if you want external access
