apps/adminer/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - adminer.home.alden.ai
  rules:
  - backendRefs:
    - name: adminer
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
