apps/adminer/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: adminer-virtualservice
  namespace: adminer
spec:
  hosts:
    - adminer.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: adminer.adminer.svc.cluster.local
            port:
              number: 80
